Bug 413195 - Falkon failed open dozen URLs from command line with one command.
Summary: Falkon failed open dozen URLs from command line with one command.
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.1.0
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-19 14:49 UTC by Szyk Cech
Modified: 2024-12-24 12:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Szyk Cech 2019-10-19 14:49:25 UTC
SUMMARY
Falkon failed open dozen URLs from command line with one command. But this should be handled according to failkon -h result.

STEPS TO REPRODUCE
1. Try run Falkon with this command:
falkon URL https://kresy.pl/ https://kopalniawiedzy.pl/wiadomosci https://www.youtube.com/user/OpcjaSpoleczna/videos https://defence24.pl/ https://www.altair.com.pl/ https://kaosx.us/news https://pointieststick.com/2019/10/13/this-week-in-kde-plasma-5-17-approaches/ https://www.qt.io/blog  http://www.benchmark.pl/kategoria/systemy-operacyjne-pc.html https://www.linuxinsider.com/perl/section/linux-developer/ https://www.linuxtoday.com/ http://apollo-core.com/knowledge.php https://exec.pl/ https://www.ppa.pl/ https://www.youtube.com/channel/UCe5Dq2HfS7IbF67qPnAuA5w/videos https://www.youtube.com/user/SPInkafilmstudio/videos

OBSERVED RESULT
Falkon opens only last page.

EXPECTED RESULT
It should open all pages in tabs. This is use full for me to have file with all news URLs and load it form script.

SOFTWARE/OS VERSIONS
# uname -a
Linux optiplex-760 5.2.13-1 #1 SMP PREEMPT Fri Sep 6 16:40:51 UTC 2019 x86_64 GNU/Linux

# lsb_release -a
LSB Version:    1.4
Distributor ID: KaOS
Description:    KaOS
Release:        rolling
Codename:       n/a


ADDITIONAL INFORMATION
This function is especially useful when lack in Falkon grouping by custom nodes in bookmarks and also lack "open all" option when click on node in bookmarks.
Comment 2 abogical 2020-02-25 17:20:41 UTC
Confirmed on my machine. Created patch to fix. Awaiting Review.
https://phabricator.kde.org/D27655
Comment 3 Bug Janitor Service 2024-12-22 15:31:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/falkon/-/merge_requests/109
Comment 4 Juraj 2024-12-24 12:26:56 UTC
Git commit a386de98eeb76e4c44a0d755a151958f3e8159f9 by Juraj Oravec.
Committed on 24/12/2024 at 12:21.
Pushed by jurajo into branch 'master'.

Open all URLs in command line arguments

Test Plan:
Run the falkon command with multiple URLs, e.g:
./falkon example.com kde.org

A new falkon window with each URL opened in a new tab. First URL selected.

Reviewers: #falkon

Subscribers: falkon

Tags: #falkon

Differential Revision: https://phabricator.kde.org/D27655

Original author: abogical (Abdel-Rahman Abdel-Rahman)

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +8    -4    src/lib/app/browserwindow.cpp
M  +2    -2    src/lib/app/browserwindow.h
M  +14   -15   src/lib/app/commandlineoptions.cpp
M  +11   -6    src/lib/app/mainapplication.cpp
M  +2    -1    src/lib/app/mainapplication.h

https://invent.kde.org/network/falkon/-/commit/a386de98eeb76e4c44a0d755a151958f3e8159f9