Open all URLs in command line arguments

BUG: 413195

Test Plan:
Run the falkon command with multiple URLs, e.g:
./falkon example.com kde.org

A new falkon window with each URL opened in a new tab. First URL selected.

Reviewers: #falkon

Subscribers: falkon

Tags: #falkon

Differential Revision: https://phabricator.kde.org/D27655

Original author: abogical (Abdel-Rahman Abdel-Rahman)

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>